myAHoAAx: (Mobile) Fix Styling For Filter Dropdown
- also fixed right sidebar bug causing the right sidebar to get pushed off of the screen at a certain width
- also fixed a bog causing the mobile view to be cut off on the right side
- also fixed a bug causing search to run again on de-collapse of a previously collapse section (due to re-rendering)

--- a/src/components/gig_input/searchable/index.scss
+++ b/src/components/gig_input/searchable/index.scss
@@ -1,6 +1,10 @@
 @import 'global';
 
 .searchable-gig-input {
+  input {
+    margin-bottom: 0;
+  }
+
   .focused {
     border-radius: 5px 5px 0 0;
   }
@@ -15,10 +19,24 @@
     overflow-y: auto;
     padding-left: 12px;
     position: absolute;
-    width: 320px;
 
     .best-match {
       font-weight: bold;
     }
+  }
+}
+
+// mobile view
+@media (min-width: 0) {
+  .filter-options-list {
+    margin: 0 10px !important;
+    width: calc(92% - 3px);
+  }
+}
+
+// desktop view
+@media (min-width: 850px) {
+  .filter-options-list {
+    width: 320px;
   }
 }
