--- a/src/routes/find/center_panel/mobile_panel_selector/index.scss
+++ b/src/routes/find/center_panel/mobile_panel_selector/index.scss
@@ -22,6 +22,7 @@
 @media (min-width: 0) {
   #mobile-panel-selector {
     display: flex;
+    padding-top: 10px;
   }
 }
 
